# zkTripster

./: .gitignore  README.md
.github/workflows/: deploy.yaml
contracts/: foundry.toml
contracts/lib/: PoEMarketplace_abi.json
contracts/src/: KeyEnc.sol  PoEMarketplace.sol
contracts/src/scripts/: api.ts
frontend/: .eslintrc  .pnp.cjs  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  router.tsx  utils.ts
frontend/src/components/: CircleAnimation.tsx  Footer.tsx  Header.tsx
frontend/src/hooks/: useMetamask.ts
frontend/src/pages/: HackerInfo.tsx  Home.tsx  IssueForm.tsx  SubmitForm.tsx  ValidateProof.tsx
frontend/src/utils/: api.ts  index.ts  verifyZkPoex.ts
marketplace/: PoEMarketplace.sol  package-lock.json  package.json
marketplace/contracts/: PoEMarketplace.sol
marketplace/data/: PoEMarketplace_abi.json
marketplace/scripts/: api.ts  getContractState.ts
sp1_prover/: .gitignore  Cargo.toml  zkpoex.bincode
sp1_prover/bid-server/: Cargo.toml  build.rs
sp1_prover/bid-server/src/: main.rs
sp1_prover/ecdh/: Cargo.toml
sp1_prover/ecdh-script/: Cargo.toml  build.rs
sp1_prover/ecdh/elf/: riscv32im-succinct-zkvm-elf
sp1_prover/ecdh/src/: main.rs
sp1_prover/evm-runner/: Cargo.toml
sp1_prover/evm-runner/src/: lib.rs
sp1_prover/fixtures/: ecdh_fixture.json  fixture.json  zkpoex_fixture.json
sp1_prover/zk-poex/: Cargo.toml
sp1_prover/zk-poex/elf/: riscv32im-succinct-zkvm-elf
sp1_prover/zk-poex/src/: main.rs
sp1_prover/zkpoex-script/: Cargo.toml  zkpoex_chacha  zkpoex_enc_key  zkpoex_tlock
(+5 files in other folders)
